<resources>

    <string name="app_name">服务通</string>
    <string name="two_dimensional_code_sign">二维码签到</string>
    <string name="two_dimensional_code_exit">二维码签退</string>
    <string name="service_contents">服务内容</string>
    <string name="trace_service">服务结果痕迹</string>
    <string name="service_evaluation">服务评价</string>
    <string name="view_customer_visit_information">查看客户拜访信息</string>
    <string name="back">返回</string>
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="prompt">温馨提示</string>
    <string name="login_login">登录</string>
    <string name="user_name">用户名</string>
    <string name="service_list">服务内容列表</string>
    <string name="service_record_list">服务记录</string>
	<string name="push_notification">通知</string>
    <string name="push_msg_content">内容</string>
    <string name="push_msg_i_see">知道了</string>
    <string name="push_msg_handle">去处理</string>
    <string name="exiting">正在退出…</string>
    <string name="cancel">取消</string>
    <string name="search_input_keyword">请输入关键字</string>
    <string name="keyword">关键字</string>
    <string name="customer_visit">客户访问</string>
    <string name="workflow">合力专销</string>
    <string name="workflow_todo">待办理流程</string>
    <string name="workflow_done">已办理流程</string>

    <!-- 自定义标题栏 -->
    <string name="titlebar_back">返回  </string>
    <string name="titlebar_more">更多</string>
    <string name="titlebar_search">搜索</string>

    <!-- 异常提示语 -->
    <string name="connect_exception">请求失败，请稍候再试！</string>

    <!-- 空列表  -->
    <string name="empty_message">没有数据</string>
    <string name="under_construction">正在建设中…</string>
    <string name="loading_message">加载中，请稍候…</string>
    <string name="error_message">网络繁忙，请稍后重试。</string>
    <string name="empty_button">刷新</string>
    <string name="loading_button">取消</string>
    <string name="error_button">重试</string>
    <string name="disconnect_button">打开设置</string>
    <string name="disconnect_message">当前网络不可用，请检查网络设置。</string>
    
</resources>