<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:background="@color/searchbar_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/search_cancel_btn"
        style="@style/settingsTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/searchbar_cancel_btn_selector"
        android:drawableLeft="@drawable/ic_searchbar_back"
        android:paddingRight="5dp"
        android:text="@string/cancel"
        android:textColor="@color/black_text" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1.0"
        android:background="@drawable/editbox_bg_sltr"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/keyword_et"
            style="@style/settingsTextNormal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/search_input_keyword"
            android:imeOptions="actionSearch"
            android:padding="5dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_text" >

            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/search_pb"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:indeterminateDrawable="@drawable/progressbar_dark"
            android:visibility="visible" />

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_search_clean"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/search_search_btn"
        style="@style/settingsTextNormal"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/searchbar_cancel_btn_selector"
        android:text="@string/titlebar_search"
        android:textColor="@color/titlebar_bg_normal" />

</LinearLayout>